lljr:修改.gitignore文件内容，更专业地更新frontend文件夹下的内容

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,23 @@
 Backend/.idea/
 
-# ===== Android / Frontend =====
-# Gradle
+# Gradle / Build
 **/.gradle/
 **/build/
 
-# Android Studio
+# IDE
 **/.idea/
 **/*.iml
+
+# Local config
 **/local.properties
 
 # Logs
 *.log
 
-# macOS / Windows
-**/.DS_Store
+# OS
+.DS_Store
 Thumbs.db
 
-# Keystore (防止误传签名文件)
+# Keystore
 *.jks
 *.keystore
